--- a/AgenticRag/pyproject.toml
+++ b/AgenticRag/pyproject.toml
@@ -17,7 +17,9 @@ dependencies = [
     "chromadb (>=1.4.1,<2.0.0)",
     "tavily-python (>=0.7.21,<0.8.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
-    "pytest (>=9.0.2,<10.0.0)"
+    "pytest (>=9.0.2,<10.0.0)",
+    "langchain-openai (>=1.1.7,<2.0.0)",
+    "sentence-transformers (>=5.2.2,<6.0.0)"
 ]
 
 
