--- a/human-in-the-loop/pyproject.toml
+++ b/human-in-the-loop/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "langchain-community (>=0.4.1,<0.5.0)",
     "black (>=26.1.0,<27.0.0)",
     "isort (>=7.0.0,<8.0.0)",
-    "python-dotenv (>=1.2.1,<2.0.0)"
+    "python-dotenv (>=1.2.1,<2.0.0)",
+    "langchain (>=1.2.9,<2.0.0)",
+    "langchain-openai (>=1.1.7,<2.0.0)"
 ]
 
 
