--- a/ReflexionAgent/pyproject.toml
+++ b/ReflexionAgent/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "langchain (>=1.2.8,<2.0.0)",
     "langchain-openai (>=1.1.7,<2.0.0)",
     "langgraph (>=1.0.7,<2.0.0)",
-    "langchain-tavily (>=0.2.17,<0.3.0)"
+    "langchain-tavily (>=0.2.17,<0.3.0)",
+    "python-dotenv (>=1.2.1,<2.0.0)"
 ]
 
 [build-system]
